# xsterm

./: .gitignore  AGENTS.md  findings.md  opencode.json  package-lock.json  package.json  progress.md  rust_commands_plan.md  rust_refactor_plan.md  task_plan.md  tmux_cc_plan.md
.omo/: boulder.json
.omo/plans/: rust-unit-tests.md  (+1 more)
doc/: bug.md  main.md  req-001-session-connection.md  req-006-tmux.md  req-manage.md  version.md  vibe-coding.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  findings.md  progress.md  task_plan.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  groups.rs  lib.rs  local_session.rs  logging_setup.rs  main.rs  session.rs  ssh_session.rs
src-tauri/src/commands/: logging.rs  mod.rs  persistence.rs  session.rs
src-tauri/src/infrastructure/: app_backend.rs  mod.rs  pty.rs  ssh.rs
src-tauri/src/models/: group.rs  mod.rs  session.rs
src-tauri/src/services/: local_session.rs  mod.rs  session_log.rs  session_manager.rs  ssh_session.rs
src-tauri/src/services/tmux/: channel_io.rs  commands.rs  events.rs  forwarder.rs  handlers.rs  mod.rs  notification.rs  parser.rs  session.rs  state.rs  state_tracker.rs
src-tauri/src/services/tmux/session/: local.rs  ssh.rs
src-tauri/src/services/tmux_underlay/: commander.rs  events.rs  mod.rs  poller.rs  state.rs  underlay_session.rs
src-tauri/src/tmux/: channel_io.rs  commands.rs  events.rs  forwarder.rs  handlers.rs  mod.rs  notification.rs  parser.rs  session.rs  state.rs
src-tauri/src/tmux/session/: local.rs  ssh.rs
test/: README.md  smoke.spec.ts
(+155 files in other folders)
